Modal Fix for the align-items property

--- a/client/design/sass/modules/_modal.scss
+++ b/client/design/sass/modules/_modal.scss
@@ -15,7 +15,7 @@ div.modalBackground{
 	display: none;
 
 	// centers the modal both horizontally and vertically
-	align-items: middle;
+	align-items: center;
 	justify-content: center;
 
 	transition: all 0.3s ease-in-out;
